Get rid of code smells